feat: add Netlify configuration and Next.js plugin

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.0.0",
     "@types/nodemailer": "^6.4.21",
