feat: add daily task reminder and fix email links
- Daily task reminder email at 16:45 TR time (13:45 UTC)
- Sends reminder to users with pending/in-progress tasks
- Shows task priority and due dates
- Fixed email links: /dashboard/tasks/{id} instead of /tasks/{id}
- Added Netlify scheduled function for daily reminders
- Added Vercel cron job configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,21 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[functions]
+  directory = "netlify/functions"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
+[build.environment]
+  SCHEDULED_FUNCTIONS_ENABLED = "true"
+
+# Günlük görev hatırlatması - Her gün saat 16:45 (TR saati, UTC+3)
+# Netlify UTC kullandığı için 13:45 UTC = 16:45 TR
+[[plugins]]
+  package = "@netlify/plugin-functions-core"
+
+  [plugins.inputs.schedule]
+    cron = "45 13 * * *"
+    path = "/.netlify/functions/daily-reminder"
