--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,8 @@
   "crons": [{
     "path": "/api/cron/event-reminders",
     "schedule": "*/5 * * * *"
+  }, {
+    "path": "/api/cron/daily-task-reminder",
+    "schedule": "45 13 * * *"
   }]
 }
