--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,6 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_FLAGS = "--legacy-peer-deps"
-  SCHEDULED_FUNCTIONS_ENABLED = "true"
 
 [[redirects]]
   from = "/*"
@@ -18,11 +17,7 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-# Günlük görev hatırlatması - Her gün saat 16:45 (TR saati, UTC+3)
-# Netlify UTC kullandığı için 13:45 UTC = 16:45 TR
-[[plugins]]
-  package = "@netlify/plugin-functions-core"
-
-  [plugins.inputs.schedule]
-    cron = "45 13 * * *"
-    path = "/.netlify/functions/daily-reminder"
+# Scheduled function for daily task reminders
+# Runs at 13:45 UTC (16:45 Turkey time, UTC+3)
+[functions."daily-reminder"]
+  schedule = "45 13 * * *"
